feat(memory): add the start of memory mapper

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,51 @@
 		"deque": "cpp",
 		"ostream": "cpp",
 		"xlocale": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"cassert": "cpp",
+		"algorithm": "cpp",
+		"cctype": "cpp",
+		"charconv": "cpp",
+		"chrono": "cpp",
+		"clocale": "cpp",
+		"condition_variable": "cpp",
+		"cstdarg": "cpp",
+		"coroutine": "cpp",
+		"forward_list": "cpp",
+		"resumable": "cpp",
+		"set": "cpp",
+		"string": "cpp",
+		"format": "cpp",
+		"fstream": "cpp",
+		"future": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"iterator": "cpp",
+		"locale": "cpp",
+		"mutex": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"random": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"span": "cpp",
+		"sstream": "cpp",
+		"stdexcept": "cpp",
+		"stop_token": "cpp",
+		"streambuf": "cpp",
+		"system_error": "cpp",
+		"thread": "cpp",
+		"variant": "cpp",
+		"xfacet": "cpp",
+		"xiosbase": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp"
 	},
 	"C_Cpp.clang_format_fallbackStyle": "Google",
 	"C_Cpp.formatting": "default",
