--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(
 include(cmake/config.cmake)
 
 add_subdirectory(libraries)
+add_subdirectory(source/memory)
 add_subdirectory(source/cpu)
 add_subdirectory(tests)
 
