--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include(cmake/config.cmake)
 add_subdirectory(libraries)
 add_subdirectory(source/memory)
 add_subdirectory(source/cpu)
+add_subdirectory(source/ppu)
 add_subdirectory(tests)
 
 add_subdirectory(source/emulator)
