lots of stuff. first part of SMB is loading up

--- a/source/cpu/CMakeLists.txt
+++ b/source/cpu/CMakeLists.txt
@@ -4,6 +4,10 @@ set(root_srcs
 	alu.cpp
 	cpu.hpp
 	cpu.cpp
+	debugCpu.hpp
+	debugCpu.cpp
+	operations.hpp
+	operations.cpp
 )
 source_group(source FILES ${root_srcs})
 
@@ -14,6 +18,8 @@ set(all_srcs
 add_library(cpu STATIC ${all_srcs})
 
 target_link_libraries(cpu
+	base
+	ppu
 	memory
 )
 
