ppu: move pt render into debug ppu

--- a/source/base/CMakeLists.txt
+++ b/source/base/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(base
 	FILE_SET HEADERS
 	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/..
 	FILES
+		color.hpp
 		pixel.hpp
 		register.hpp
 )
