--- a/source/ppu/CMakeLists.txt
+++ b/source/ppu/CMakeLists.txt
@@ -1,22 +1,26 @@
-set(root_srcs
-	palette.hpp
-	palette.cpp
-	ppu.hpp
-	ppu.cpp
-)
-source_group(source FILES ${root_srcs})
+add_library(ppu STATIC)
 
-set(all_srcs
-	${root_srcs}
+target_sources(ppu
+	PRIVATE
+		systemPalette.cpp
+		ppu.cpp
 )
 
-add_library(ppu STATIC ${all_srcs})
+target_sources(ppu
+	INTERFACE
+	FILE_SET HEADERS
+	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/..
+	FILES
+		systemPalette.hpp
+		ppu.hpp
+)
 
 target_link_libraries(ppu
+	base
 	memory
 )
 
 target_include_directories(ppu
 	PRIVATE
-	${CMAKE_SOURCE_DIR}/source
+		${CMAKE_SOURCE_DIR}/source
 )
