--- a/source/emulator/debug/CMakeLists.txt
+++ b/source/emulator/debug/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(emulator
 	PRIVATE
 		cpuRenderer.cpp
+		debugCpu.cpp
 		debugPpu.cpp
+		operations.cpp
 		palette.cpp
 		patternTable.cpp
 )
@@ -12,7 +14,9 @@ target_sources(emulator
 	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../..
 	FILES
 		cpuRenderer.hpp
+		debugCpu.hpp
 		debugPpu.hpp
+		operations.hpp
 		palette.hpp
 		patternTable.hpp
 )
