--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(base)
 add_subdirectory(cartridge)
 add_subdirectory(cpu)
+add_subdirectory(dma)
 add_subdirectory(input)
 add_subdirectory(ppu)
 
