--- a/source/emulator/debug/CMakeLists.txt
+++ b/source/emulator/debug/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(emulator
 	PRIVATE
+		cpuRecorder.cpp
 		cpuRenderer.cpp
 		debugCpu.cpp
 		debugPpu.cpp
+		decompiler.cpp
 		operations.cpp
 		palette.cpp
 		patternTable.cpp
@@ -13,9 +15,12 @@ target_sources(emulator
 	FILE_SET HEADERS
 	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../..
 	FILES
+		cpuRecorder.hpp
 		cpuRenderer.hpp
+		cpuStackFrame.hpp
 		debugCpu.hpp
 		debugPpu.hpp
+		decompiler.hpp
 		operations.hpp
 		palette.hpp
 		patternTable.hpp
