--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(cartridge)
 add_subdirectory(cpu)
 add_subdirectory(dma)
 add_subdirectory(input)
+add_subdirectory(platform)
 add_subdirectory(ppu)
 
 add_subdirectory(emulator)
