emulator: abstract out renderer

--- a/source/emulator/CMakeLists.txt
+++ b/source/emulator/CMakeLists.txt
@@ -2,10 +2,10 @@ add_executable(emulator)
 
 target_sources(emulator
 	PRIVATE
+		app.cpp
 		main.cpp
 		nes.cpp
 		sdlController.cpp
-		window.cpp
 )
 
 target_sources(emulator
@@ -13,9 +13,9 @@ target_sources(emulator
 	FILE_SET HEADERS
 	BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/..
 	FILES
+		app.hpp
 		nes.hpp
 		sdlController.hpp
-		window.hpp
 )
 
 add_subdirectory(debug)
@@ -27,12 +27,8 @@ target_link_libraries(emulator
 		cpu
 		dma
 		input
+		platform
 		ppu
-
-		nfd
-		SDL2main
-		SDL2-static
-		SDL2_ttf
 )
 
 target_include_directories(emulator
